--- a/stylesheets/scss/components/_selection.scss
+++ b/stylesheets/scss/components/_selection.scss
@@ -5,6 +5,7 @@
  **************************************/
 
 $selection-size: rem-calc($font-size-body-1+0px);
+$selection-border-size: rem-calc(2px);
 
 input[type="checkbox"].sc-checkbox, input[type="radio"].sc-radio {
 	@include opacity(0);
@@ -18,7 +19,7 @@ input[type="checkbox"].sc-checkbox, input[type="radio"].sc-radio {
 			content: '';
 			display: inline-block;
 			background: transparent;
-			border: rem-calc(2px) solid $selection-color;
+			border: $selection-border-size solid $selection-color;
 			@include square($selection-size);
 			font-family: 'Material Icons';
 			position: relative;
@@ -53,22 +54,22 @@ input[type="checkbox"].sc-checkbox {
 	// On
 	&:checked + label:before {
 		background: $selection-active-color;
-		border: rem-calc(2px) solid $selection-active-color;
+		border: $selection-border-size solid $selection-active-color;
 		content: '\E5CA';
 		color: $background;
 	}
 
 	// Disabled off
 	&:disabled + label:before {
-		border: rem-calc(2px) solid $selection-disabled-color;
+		border: $selection-border-size solid $selection-disabled-color;
 	}
 
 	// Disabled on
 	&:disabled:checked + label:before {
 		background: $selection-disabled-color;
 		border: none;
-		@include square( calc( #{$selection-size} + #{rem-calc(4px)} ) );
-		line-height: calc( #{$selection-size} + #{rem-calc(4px)} );
+		@include square( calc( #{$selection-size} + (#{$selection-border-size} * 2) ) );
+		line-height: calc( #{$selection-size} + (#{$selection-border-size} * 2) );
 		text-align: center;
 	}
 
@@ -146,7 +147,7 @@ input[type="radio"].sc-radio {
 
 	// Disabled off
 	&:disabled + label:before {
-		border: rem-calc(2px) solid $selection-disabled-color;
+		border: $selection-border-size solid $selection-disabled-color;
 	}
 
 	// Disabled on
