--- a/stylesheets/scss/components/_textfields.scss
+++ b/stylesheets/scss/components/_textfields.scss
@@ -4,244 +4,285 @@
  * http://www.google.com/design/spec/components/text-fields.html
  **************************************/
 
+$textfield-border-size: rem-calc(2px);
+
 // Some default styling
-.sc-input {
-	position: $textfield-position;
+.sc-floating-input, .sc-floating-dense-input, .sc-single-input, .sc-single-dense-input {
+	position: relative;
 
 	input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"], textarea {
-		border: 0;
-		border-bottom: $textfield-off-bottom;
+		border: none;
+		border-bottom: $textfield-border-size solid $grey;
 		outline: none;
-		position: $textfield-input-position;
-		width: $textfield-width;
-		@include transition($textfield-small-transition);
+		position: absolute;
+		width: 100%;
+		@include transition(all $transition-small-duration $basic-transition);
 
 		@media #{$medium-only} {
-			@include transition($textfield-medium-transition);
+			@include transition(all $transition-medium-duration $basic-transition);
 		}
 
 		@media #{$medium-up} {
-			@include transition($textfield-large-transition);
+			@include transition(all $transition-large-duration $basic-transition);
 		}
 
 		&:active, &:focus {
-			border-bottom: $textfield-focus-bottom;
+			border-bottom: $textfield-border-size solid $textfield-on-color;
 
 			+ label {
-				color: $textfield-focus-label;
+				color: $textfield-on-color;
 			}
 		}
 
-		&:disabled {
+		&:disabled, &:disabled:active, &:disabled:focus {
 			background: none;
-			border-bottom: $textfield-disabled-bottom;
+			border-bottom: $textfield-border-size dotted $textfield-disabled-color;
 
-			&:active, &:focus {
-				border-bottom: $textfield-disabled-bottom;
-
-				+ label {
-					color: $grey;
-					display: block;
-				}
+			+ label {
+				color: $grey;
 			}
+		}
+
+		&:required + label:after {
+			content: ' \e838';
+			font-family: 'Material Icons';
+			font-size: rem-calc(7px);
+			vertical-align: super;
+			@include transition(color $transition-small-duration $basic-transition);
+
+			@media #{$medium-only} {
+				@include transition(color $transition-medium-duration $basic-transition);
+			}
+
+			@media #{$medium-up} {
+				@include transition(color $transition-large-duration $basic-transition);
+			}
+		}
+
+		&:active:required + label:after, &:focus:required + label:after {
+			color: $textfield-required-color;
 		}
 	}
 
 	label {
-		color: $textfield-label-color;
+		color: $textfield-off-color;
 		cursor: text;
-		position: $textfield-label-position;
+		position: absolute;
 
-		@include transition($textfield-small-transition);
+		@include transition(all $transition-small-duration $basic-transition);
 
 		@media #{$medium-only} {
-			@include transition($textfield-medium-transition);
+			@include transition(all $transition-small-duration $basic-transition);
 		}
 
 		@media #{$medium-up} {
-			@include transition($textfield-large-transition);
+			@include transition(all $transition-small-duration $basic-transition);
 		}
 
 		&.sc-active {
-			color: $textfield-label-active-color;
+			color: $textfield-off-color;
 		}
 	}
 
 	textarea {
-		font-family: $textfield-textarea-font-family;
-		font-size: $textfield-textarea-font-size;
+		font-family: inherit;
+		font-size: inherit;
+		overflow: hidden;
 	}
 }
+
+$textfield-floating-height: rem-calc(72px); // Default rem-calc(72px)
+$textfield-floating-padding: rem-calc(16px); // Default rem-calc(16px)
+$textfield-floating-divider: rem-calc(8px); // Default rem-calc(8px)
+$textfield-floating-font-size: rem-calc(16px); // Default rem-calc(16px)
+$textfield-floating-label-font-size: rem-calc(12px); // Default rem-calc(12px);
 
 // Floating inputs
 .sc-floating-input {
 	height: $textfield-floating-height;
-	padding: $textfield-floating-padding;
-	@extend .sc-input;
+	padding: $textfield-floating-padding 0 $textfield-floating-divider 0;
 
 	input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"], textarea {
-		bottom: $textfield-floating-input-bottom;
-		font-size: $textfield-floating-input-font-size;
-		padding: $textfield-floating-input-padding;
+		bottom: $textfield-floating-divider;
+		font-size: $textfield-floating-font-size;
+		padding: $textfield-floating-divider 0;
 
 		&:active, &:focus {
 			+ label {
-				bottom: $textfield-floating-input-focus-label-bottom;
-				font-size: $textfield-floating-input-focus-label-font-size;
+				bottom: calc(#{$textfield-floating-padding} + #{$textfield-floating-font-size} + #{$textfield-floating-divider});
+				font-size: $textfield-floating-label-font-size;
 			}
 		}
 	}
 
 	label {
-		bottom: $textfield-floating-label-bottom;
+		bottom: $textfield-floating-padding;
+		font-size: $textfield-floating-font-size;
+		font-weight: 400;
 
 		&.sc-active {
-			bottom: $textfield-floating-label-active-bottom;
-			font-size: $textfield-floating-label-active-font-size;
+			bottom: calc(#{$textfield-floating-padding} + #{$textfield-floating-font-size} + #{$textfield-floating-divider});
+			font-size: $textfield-floating-label-font-size;
 		}
 	}
 }
 
+$textfield-floating-dense-height: rem-calc(60px); // Default rem-calc(60px)
+$textfield-floating-dense-padding: rem-calc(12px); // Default rem-calc(12px)
+$textfield-floating-dense-divider: rem-calc(4px); // Default rem-calc(4x)
+$textfield-floating-dense-font-size: rem-calc(13px); // Default rem-calc(13px)
+$textfield-floating-dense-label-font-size: rem-calc(12px); // Default rem-calc(12px);
+
+// Floating inputs
 .sc-floating-dense-input {
-	height: rem-calc(60px);
-	padding: rem-calc(12px) 0 rem-calc(4px) 0;
-	@extend .sc-input;
+	height: $textfield-floating-dense-height;
+	padding: $textfield-floating-dense-padding 0 $textfield-floating-dense-divider 0;
 
-	input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"] {
-		bottom: $textfield-floating-dense-input-bottom;
-		font-size: $textfield-floating-dense-input-font-size;
-		padding: $textfield-floating-dense-input-padding;
+	input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"], textarea {
+		bottom: $textfield-floating-dense-divider;
+		font-size: $textfield-floating-dense-font-size;
+		padding: $textfield-floating-dense-divider 0;
 
 		&:active, &:focus {
 			+ label {
-				bottom: $textfield-floating-dense-input-focus-label-bottom;
+				bottom: calc(#{$textfield-floating-dense-padding} + #{$textfield-floating-dense-font-size} + #{$textfield-floating-dense-divider});
+				font-size: $textfield-floating-dense-label-font-size;
 			}
 		}
 	}
 
 	label {
-		bottom: $textfield-floating-dense-label-bottom;
+		bottom: $textfield-floating-dense-padding;
+		font-size: $textfield-floating-dense-font-size;
+		font-weight: 400;
 
 		&.sc-active {
-			bottom: $textfield-floating-dense-label-active-bottom;
-			font-size: $textfield-floating-dense-label-active-font-size;
+			bottom: calc(#{$textfield-floating-dense-padding} + #{$textfield-floating-dense-font-size} + #{$textfield-floating-dense-divider});
+			font-size: $textfield-floating-dense-label-font-size;
 		}
 	}
 }
+
+$textfield-single-height: rem-calc(48px); // Default rem-calc(48px)
+$textfield-single-padding: rem-calc(16px); // Default rem-calc(16px)
+$textfield-single-font-size: rem-calc(16px); // Default rem-calc(16px)
+$textfield-single-divider: rem-calc(8px); // Default rem-calc(8px)
+$textfield-single-icon-size: rem-calc(24px); // Default rem-calc(24)
 
 // Single line inputs
-.sc-single-input {
-	height: rem-calc(48px);
-	padding: rem-calc(16px) 0 rem-calc(8px) 0;
-	@extend .sc-input;
+.sc-single-input, .sc-single-dense-input {
+	height: $textfield-single-height;
+	padding: $textfield-single-padding 0 $textfield-single-divider 0;
 
 	&.sc-icon {
 		input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"] {
-			left: rem-calc(48px - 16px);
-			right: 0;
+			width: calc(100% - #{$textfield-single-height});
+			left: $textfield-single-height;
 		}
 
 		label {
-			left: rem-calc(48px - 16px);
-			right: 0;
+			width: calc(100% - #{$textfield-single-height});
+			left: $textfield-single-height;
 		}
-	}
 
-	input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"] {
-		bottom: rem-calc(16px);
-		font-size: rem-calc(16px);
-		padding: rem-calc(8px) 0;
+		.material-icons {
+			color: $textfield-off-color;
+			@include square($textfield-single-icon-size);
+			font-size: $textfield-single-icon-size;
+			padding: 0 calc( ( #{$textfield-single-height} - #{$textfield-single-icon-size} ) / 2 );
+			@include transition(color $transition-small-duration $basic-transition);
 
-		&:active, &:focus {
-			border-bottom: rem-calc(2px) solid $main-color;
-
-			+ label {
-				display: none;
+			@media #{$medium-only} {
+				@include transition(color $transition-medium-duration $basic-transition);
 			}
 
-			+ .material-icons {
-				color: $main-color;
+			@media #{$medium-up} {
+				@include transition(color $transition-large-duration $basic-transition);
 			}
 		}
 	}
 
-	.material-icons {
-		font-size: rem-calc(24px);
-		height: rem-calc(48px - 16px);
-		margin-top: rem-calc(-16px);
-		padding: rem-calc(16px);
-		position: inherit;
-		width: rem-calc(48px - 16px);
-	}
-
-	label {
-		bottom: rem-calc(16px);
-		display: block;
-		font-size: rem-calc(16px);
-
-		&.sc-active {
-			display: none;
-		}
-	}
-}
-
-.sc-single-dense-input {
-	height: rem-calc(40px);
-	padding: rem-calc(12px) 0;
-	@extend .sc-input;
-
 	input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"] {
-		border-bottom: rem-calc(2px) solid $grey;
-		bottom: rem-calc(12px);
-		font-size: rem-calc(13px);
-		padding: rem-calc(4px) 0;
+		bottom: $textfield-single-divider;
+		font-size: $textfield-single-font-size;
+		padding: $textfield-single-divider 0;
 
 		&:active, &:focus {
-			border-bottom: rem-calc(2px) solid $main-color;
+			border-bottom: $textfield-border-size solid $textfield-on-color;
 
 			+ label {
-				display: none;
+				visibility: hidden;
+				@include opacity(0);
+			}
+
+			~ .material-icons {
+				color: $textfield-on-color;
 			}
 		}
 	}
 
 	label {
-		bottom: rem-calc(12px);
-		font-size: rem-calc(13px);
-
-		&.sc-active {
-			display: none;
-		}
-	}
-}
-
-input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"], textarea {
-	&:required + label:after {
-		@extend .material-icons;
-		content: $textfield-required-content;
-		font-family: 'Material Icons';
-		font-size: $textfield-required-font-size;
-		vertical-align: $textfield-required-vertical-align;
-		@include transition($textfield-small-transition);
+		bottom: $textfield-single-padding;
+		visibility: visible;
+		@include opacity(1);
+		font-size: $textfield-single-font-size;
+		@include transition(opacity $transition-small-duration $basic-transition unquote(',')
+							visibility $transition-small-duration $basic-transition);
 
 		@media #{$medium-only} {
-			@include transition($textfield-medium-transition);
+			@include transition(opacity $transition-medium-duration $basic-transition unquote(',')
+			visibility $transition-medium-duration $basic-transition);
 		}
 
 		@media #{$medium-up} {
-			@include transition($textfield-large-transition);
+			@include transition(opacity $transition-large-duration $basic-transition unquote(',')
+			visibility $transition-large-duration $basic-transition);
+		}
+
+		&.sc-active {
+			visibility: hidden;
+			@include opacity(0);
+		}
+	}
+}
+
+$textfield-single-dense-height: rem-calc(40px); // Default rem-calc(40px)
+$textfield-single-dense-padding: rem-calc(12px); // Default rem-calc(12px)
+$textfield-single-dense-font-size: rem-calc(13px); // Default rem-calc(13px)
+$textfield-single-dense-divider: rem-calc(4px); // Default rem-calc(4px)
+$textfield-single-dense-icon-size: rem-calc(20px); // Default rem-calc(20px)
+
+// Single line dense inputs
+.sc-single-dense-input {
+	height: $textfield-single-dense-height;
+	padding: $textfield-single-dense-padding 0 $textfield-single-dense-divider 0;
+
+	&.sc-icon {
+		input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"] {
+			width: calc(100% - #{$textfield-single-dense-height});
+			left: $textfield-single-dense-height;
+		}
+
+		label {
+			width: calc(100% - #{$textfield-single-dense-height});
+			left: $textfield-single-dense-height;
+		}
+
+		.material-icons {
+			@include square($textfield-single-dense-icon-size);
+			font-size: $textfield-single-dense-icon-size;
+			padding: 0 calc( ( #{$textfield-single-dense-height} - #{$textfield-single-dense-icon-size} ) / 2 );
 		}
 	}
 
-	&:active, &:focus {
-		&:required + label:after{
-			color: $textfield-required-color;
-		}
+	input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"] {
+		bottom: $textfield-single-dense-divider;
+		font-size: $textfield-single-dense-font-size;
+		padding: $textfield-single-dense-divider 0;
 	}
 
-	&.active {
-		&:required + label:after {
-			color: $textfield-required-color;
-		}
+	label {
+		bottom: $textfield-single-dense-padding;
+		font-size: $textfield-single-dense-font-size;
 	}
 }
