--- a/stylesheets/scss/components/_settings.scss
+++ b/stylesheets/scss/components/_settings.scss
@@ -253,119 +253,13 @@ $drawer-profile-scrim: to top, rgba($grey-900, 0.4) 15%, rgba($white, 0) 33%; //
  * Sliders
  **************************************/
 // Track
-$slider-track-height: rem-calc(1.5px); // Default rem-calc(1.5px)
-$slider-track-background: lighten($black, (100% - 26%)); // Default lighten($black, (100% - 26%));
-$slider-track-active-background: $main-color; // Default $main-color
-$slider-track-small-transition: background $transition-small-duration $basic-transition; // Default background $transition-small-duration $basic-transition
-$slider-track-medium-transition: background $transition-medium-duration $basic-transition; // Default background $transition-medium-duration $basic-transition
-$slider-track-large-transition: background $transition-large-duration $basic-transition; // Default background $transition-large-duration $basic-transition
-$slider-range-track-margin: rem-calc(-27px) 0 0 0; // Default rem-calc(-27px) 0 0 0
-$slider-range-track-before: $slider-track-active-background; // Default $slider-track-active-background
-$slider-range-track-after: $slider-track-background; // Default $slider-track-background
-$slider-range-track-before-disabled: $slider-track-background; // Default $slider-track-background
-
-// Thumb
+$slider-off-color: lighten($black, (100% - 26%)); // Default lighten($black, (100% - 26%));
 $slider-thumb-background: $white; // Default $white
-$slider-thumb-size: rem-calc(14px); // Default rem-calc(14px)
-$slider-thumb-border: rem-calc(2px) solid $slider-track-background; // Default rem-calc(2px) solid $slider-track-background
-$slider-thumb-margin: rem-calc(-6px) 0 0 0; // Default rem-calc(-6px) 0 0 0
-$slider-disabled-thumb-background: $white; // Default $white
-$slider-disabled-thumb-border: $slider-thumb-border; // Default $slider-thumb-border
-$slider-thumb-active-background: $slider-track-active-background; // Default $slider-track-active-background
-$slider-thumb-active-border: rem-calc(2px) solid $slider-thumb-active-background; // Default rem-calc(2px) solid $slider-thumb-active-background
-$slider-thumb-active-size: rem-calc(16px); // Default rem-calc(16px)
-$slider-thumb-active-margin: rem-calc(-7px) 0 0 0; // Default rem-calc(-7px) 0 0 0
-$slider-thumb-disabled-background: $slider-track-background; // Default $slider-track-background
-$slider-thumb-disabled-size: $slider-thumb-size; // Default $slider-thumb-size
-$slider-thumb-disabled-border: rem-calc(2px) solid $white; // Default rem-calc(2px) solid $white
-$slider-thumb-disabled-margin: $slider-thumb-margin; // Default rem-calc(-6px) 0 0 0
-$slider-thumb-disabled-not-null-background: $slider-thumb-disabled-background; // Default $slider-thumb-background
-$slider-thumb-disabled-not-null-border: $slider-thumb-disabled-border; // Default $slider-thumb-disabled-border
-$slider-thumb-disabled-discrete-background: transparent; // Default transparent
-$slider-thumb-disabled-discrete-border: rem-calc(2px) solid $slider-thumb-disabled-discrete-background; // Default$slider-thumb-disabled-discrete-background
-$slider-thumb-not-null-background: $slider-thumb-active-background; // Default $slider-thumb-active-background
-$slider-thumb-not-null-border: $slider-thumb-active-border; // $slider-thumb-active-border
-$slider-thumb-not-null-size: $slider-thumb-size; // Default $slider-thumb-size
-$slider-thumb-not-null-margin: $slider-thumb-margin; // Default $slider-thumb-margin
-$slider-thumb-not-null-active-size: $slider-thumb-active-size; // Default $slider-thumb-active-size
-$slider-thumb-not-null-active-margin: $slider-thumb-active-margin; // Default $slider-thumb-active-margin
-$slider-discrete-thumb-hidden-background: $slider-thumb-disabled-discrete-background; // Default $slider-thumb-disabled-discrete-background
-$slider-discrete-thumb-hidden-border: rem-calc(2px) solid $slider-discrete-thumb-hidden-background; // Default rem-calc(2px) solid $slider-discrete-thumb-hidden-background
-$slider-thumb-small-transition: background $transition-small-duration $basic-transition unquote(',')
-								border $transition-small-duration $basic-transition unquote(',')
-								height $transition-small-duration $basic-transition unquote(',')
-								width $transition-small-duration $basic-transition unquote(',')
-								margin $transition-small-duration $basic-transition; // Default background $transition-small-duration $basic-transition unquote(',') border $transition-small-duration $basic-transition unquote(',') height $transition-small-duration $basic-transition unquote(',') width $transition-small-duration $basic-transition unquote(',') margin $transition-small-duration $basic-transition
-$slider-thumb-medium-transition: 	background $transition-medium-duration $basic-transition unquote(',')
-									border $transition-medium-duration $basic-transition unquote(',')
-									height $transition-medium-duration $basic-transition unquote(',')
-									width $transition-medium-duration $basic-transition unquote(',')
-									margin $transition-medium-duration $basic-transition; // Default background $transition-medium-duration $basic-transition unquote(',') border $transition-medium-duration $basic-transition unquote(',') height $transition-medium-duration $basic-transition unquote(',') width $transition-medium-duration $basic-transition unquote(',') margin $transition-medium-duration $basic-transition
-$slider-thumb-large-transition: background $transition-large-duration $basic-transition unquote(',')
-								border $transition-large-duration $basic-transition unquote(',')
-								height $transition-large-duration $basic-transition unquote(',')
-								width $transition-large-duration $basic-transition unquote(',')
-								margin $transition-large-duration $basic-transition; // Default background $transition-large-duration $basic-transition unquote(',') border $transition-large-duration $basic-transition unquote(',') height $transition-large-duration $basic-transition unquote(',') width $transition-large-duration $basic-transition unquote(',') margin $transition-large-duration $basic-transition
+$slider-on-color: $main-color; // Default $main-color
 
 // Bubble
 $slider-bubble-background: $black; // Default $black
 $slider-bubble-font-color: $white; // Default $white
-$slider-bubble-size: $slider-thumb-size; // Default $slider-thumb-size
-$slider-bubble-border: rem-calc(2px) solid $slider-bubble-background; // Default rem-calc(2px) solid $slider-bubble-background
-$slider-bubble-bottom: rem-calc(-25px); // Default rem-calc(-25px)
-$slider-bubble-disabled-background: $slider-track-background; // Default $slider-track-background
-$slider-bubble-disabled-border: $slider-thumb-disabled-border;
-$slider-bubble-not-null-background: $slider-track-active-background; // Default $slider-track-active-background
-$slider-bubble-not-null-font-color: $slider-bubble-font-color; // Default $slider-bubble-font-color
-$slider-bubble-not-null-border: rem-calc(2px) solid $slider-track-active-background; // Default rem-calc(2px) solid $slider-track-active-background
-$slider-bubble-active-background: $slider-track-background; // Default $slider-track-background
-$slider-bubble-active-font-color: $slider-bubble-font-color; // Default $slider-bubble-font-color
-$slider-bubble-active-size: rem-calc(25px); // Default rem-calc(25px)
-$slider-bubble-active-font-size: rem-calc(10px); // Default 10px
-$slider-bubble-active-bottom: rem-calc(1.4px); // Default rem-calc(1.4px)
-$slider-bubble-active-margin: 0 0 0 rem-calc(-12.5px); // Default 0 0 0 rem-calc(-12.5px)
-$slider-bubble-active-not-null-background: $slider-track-active-background; // Default $slider-track-active-background
-$slider-bubble-active-not-null-font-size: $slider-bubble-active-font-size; // Default $slider-bubble-active-font-size
-$slider-bubble-active-disabled-background: $slider-track-background; // Default $slider-track-background
-$slider-triangle-active-border-hidden: rem-calc(10px) solid transparent; // Default rem-calc(10px) solid transparent
-$slider-triangle-active-border-top: rem-calc(10px) solid $slider-track-background; // Default rem-calc(10px) solid $slider-track-background
-$slider-triangle-active-top: rem-calc(21px); // Default rem-calc(21px)
-$slider-triangle-active-right: rem-calc(3.5px); // Default rem-calc(3.5px);
-$slider-triangle-active-not-null-border-top: rem-calc(10px) solid $slider-track-active-background; // Default rem-calc(10px) solid $slider-track-active-background
-$slider-triangle-active-disabled-border: $slider-triangle-active-border-hidden; // Default $slider-triangle-active-border-hidden
-$slider-triangle-active-disabled-border-top: rem-calc(10px) solid $slider-track-background; // Default rem-calc(10px) solid $slider-track-background
-
-$slider-bubble-small-transition: 	background $transition-small-duration $basic-transition unquote(',')
-									width $transition-small-duration $basic-transition unquote(',')
-									height $transition-small-duration $basic-transition unquote(',')
-									border $transition-small-duration $basic-transition unquote(',')
-									bottom $transition-small-duration $basic-transition unquote(',')
-									margin $transition-small-duration $basic-transition unquote(',');
-$slider-bubble-medium-transition:	background $transition-medium-duration $basic-transition unquote(',')
-									width $transition-medium-duration $basic-transition unquote(',')
-									height $transition-medium-duration $basic-transition unquote(',')
-									border $transition-medium-duration $basic-transition unquote(',')
-									bottom $transition-medium-duration $basic-transition unquote(',')
-									margin $transition-medium-duration $basic-transition unquote(',');
-$slider-bubble-large-transition:	background $transition-large-duration $basic-transition unquote(',')
-									width $transition-large-duration $basic-transition unquote(',')
-									height $transition-large-duration $basic-transition unquote(',')
-									border $transition-large-duration $basic-transition unquote(',')
-									bottom $transition-large-duration $basic-transition unquote(',')
-									margin $transition-large-duration $basic-transition unquote(',');
-
-$slider-bubble-triangle-small-transition: 	border-left $transition-small-duration $basic-transition unquote(',')
-											border-right $transition-small-duration $basic-transition unquote(',')
-											border-top $transition-small-duration $basic-transition unquote(',')
-											top $transition-small-duration $basic-transition unquote(',');
-$slider-bubble-triangle-medium-transition: 	border-left $transition-medium-duration $basic-transition unquote(',')
-											border-right $transition-medium-duration $basic-transition unquote(',')
-											border-top $transition-medium-duration $basic-transition unquote(',')
-											top $transition-medium-duration $basic-transition unquote(',');
-$slider-bubble-triangle-large-transition: 	border-left $transition-large-duration $basic-transition unquote(',')
-											border-right $transition-large-duration $basic-transition unquote(',')
-											border-top $transition-large-duration $basic-transition unquote(',')
-											top $transition-large-duration $basic-transition unquote(',');
 
 /**************************************
  * Text fields
