--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @include scrollbar();
 
-::selection, ::-moz-selection {
+@include selection() {
 	background: $select-background;
 }
 
